20-manifestfile.yaml/01-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cems-ingress
  namespace: cems-nginx
spec:
  ingressClassName: azure/application-gateway
  rules:
  - host: cems.danskebank.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: retail-service
            port:
              number: 80
